<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Waypoint</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_student_info">StudentInfoActivity</string>
    <string name="information">WayPoint Information</string>
    <string name="selected">selected</string>
    <string name="latitude">LAT</string>
    <string name="longitude">LON</string>
    <string name="name">Name</string>
    <string name="add">Address</string>
    <string name="category">Category</string>
</resources>