<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/light_green"
    tools:context= ".WayPointDetail">
    <TextView
        android:text="@string/information"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/info_title"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lat_view"
        android:layout_below="@id/info_title"
        android:paddingBottom="15dp"
        android:weightSum="1">
        <TextView
            android:textStyle="bold"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:id="@+id/latitude"
            android:text="@string/latitude"
            android:gravity="left"
            android:layout_weight="0.10" />
        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/latitudeED"
            android:layout_gravity="right"
            android:gravity="right"
            android:editable="true"
            android:hint=""
            android:layout_weight="0.15" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lon_view"
        android:layout_below="@id/lat_view"
        android:paddingBottom="15dp"
        android:weightSum="1">
        <TextView
            android:textStyle="bold"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:id="@+id/longitude"
            android:text="@string/longitude"
            android:gravity="left"
            android:layout_weight="0.10" />
        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_weight="0.15"
            android:id="@+id/longitudeED"
            android:gravity="right"
            android:editable="true"
            android:hint="" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_view"
        android:layout_below="@id/lon_view"
        android:paddingBottom="15dp"
        android:weightSum="1">
        <TextView
            android:textStyle="bold"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:id="@+id/name"
            android:text="@string/name"
            android:gravity="left" />
        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/nameED"
            android:layout_gravity="right"
            android:gravity="right"
            android:editable="true"
            android:hint=""
            android:layout_weight="0.15" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_view"
        android:layout_below="@id/name_view"
        android:paddingBottom="15dp"
        android:weightSum="1">
        <TextView
            android:textStyle="bold"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:id="@+id/add"
            android:text="@string/add"
            android:gravity="left" />
        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/addED"
            android:layout_gravity="right"
            android:gravity="right"
            android:editable="true"
            android:hint=""
            android:layout_weight="0.15" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cat_view"
        android:layout_below="@id/add_view"
        android:paddingBottom="15dp"
        android:weightSum="1">
        <TextView
            android:textStyle="bold"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:id="@+id/cat"
            android:text="@string/category"
            android:gravity="left" />
        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/catED"
            android:layout_gravity="right"
            android:gravity="right"
            android:editable="true"
            android:hint=""
            android:layout_weight="0.15" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_view"
        android:paddingBottom="15dp"
        android:layout_below="@id/cat_view">
        <Button
            style="?android:attr/buttonStyleSmall"
            android:onClick="addClicked"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Add New"
            android:layout_weight="0.33"
            android:id="@+id/addButt" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:onClick="removeClicked"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Remove"
            android:layout_weight="0.33"
            android:id="@+id/removeButt" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:onClick="modifyClicked"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Modify"
            android:layout_weight="0.33"
            android:id="@+id/modifyButt" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_vieww"
        android:paddingBottom="15dp"
        android:layout_below="@id/button_view">
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="backClicked"
            android:text="Back"
            android:layout_weight="0.50"
            android:id="@+id/backkButt"
            />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="exportContent"
            android:text="Export"
            android:layout_weight="0.50"
            android:id="@+id/exportButt"
            />
        </LinearLayout>
</RelativeLayout>