<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/light_green"
    tools:context= ".WayPointDetail">
    <TextView
        android:text="Add new WayPoint Info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/info_title1"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lat_view1"
        android:layout_below="@id/info_title1"
        android:paddingBottom="15dp"
        android:weightSum="1">
        <TextView
            android:textStyle="bold"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:id="@+id/latitude1"
            android:text="@string/latitude"
            android:gravity="left"
            android:layout_weight="0.10" />
        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/latitudeED1"
            android:layout_gravity="right"
            android:gravity="right"
            android:editable="true"
            android:hint=""
            android:layout_weight="0.15" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lon_view1"
        android:layout_below="@id/lat_view1"
        android:paddingBottom="15dp"
        android:weightSum="1">
        <TextView
            android:textStyle="bold"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:id="@+id/longitude1"
            android:text="@string/longitude"
            android:gravity="left"
            android:layout_weight="0.10" />
        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_weight="0.15"
            android:id="@+id/longitudeED1"
            android:gravity="right"
            android:editable="true"
            android:hint="" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_view1"
        android:layout_below="@id/lon_view1"
        android:paddingBottom="15dp"
        android:weightSum="1">
        <TextView
            android:textStyle="bold"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:id="@+id/name1"
            android:text="@string/name"
            android:gravity="left" />
        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/nameED1"
            android:layout_gravity="right"
            android:gravity="right"
            android:editable="true"
            android:hint=""
            android:layout_weight="0.15" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_view1"
        android:layout_below="@id/name_view1"
        android:paddingBottom="15dp"
        android:weightSum="1">
        <TextView
            android:textStyle="bold"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:id="@+id/add1"
            android:text="@string/add"
            android:gravity="left" />
        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/addED1"
            android:layout_gravity="right"
            android:gravity="right"
            android:editable="true"
            android:hint=""
            android:layout_weight="0.15" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cat_view1"
        android:layout_below="@id/add_view1"
        android:paddingBottom="15dp"
        android:weightSum="1">
        <TextView
            android:textStyle="bold"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:id="@+id/cat1"
            android:text="@string/category"
            android:gravity="left" />
        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/catED1"
            android:layout_gravity="right"
            android:gravity="right"
            android:editable="true"
            android:hint=""
            android:layout_weight="0.15" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_view1"
        android:paddingBottom="15dp"
        android:layout_below="@id/cat_view1">
        <Button
            style="?android:attr/buttonStyleSmall"
            android:onClick="backClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:layout_weight="0.50"
            android:id="@+id/back" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:onClick="addClickedNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"
            android:layout_weight="0.50"
            android:id="@+id/addButt1" />
    </LinearLayout>
</RelativeLayout>